--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+remote_theme: andrewhwanpark/dark-poole
 title: To Wander, Accurst
 description: A blog about the travels of those most unwise or unfortunate to the ruined city of Thrull
